Name:                askitter
Version:             0.0.1
Synopsis:            Haskell API for twitter using OAuth
Homepage:            http://github.com/veinor/askitter
License:             MIT
License-file:        LICENSE
Author:              Patrick Hurst
Maintainer:          phurst@mit.edu
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Build-depends: base >= 3, bytestring, json, hoauth == 0.3.*, mtl, binary
  Exposed-modules: Web.Twitter, Web.Twitter.OAuth
