Name:                askitter
Version:             0.0.2
Synopsis:            Twitter API bindings in Haskell
Homepage:            https://github.com/killerswan/askitter/
License:             MIT
License-file:        LICENSE
Author:              Patrick Hurst <phurst@mit.edu>
Maintainer:          Kevin Cantu <me@kevincantu.org>
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Library
  ghc-options: -Wall -O2
  build-depends:
    base >= 3,
    binary,
    bytestring,
    curl,
    hoauth >= 0.3.4,
    json,
    mtl
  exposed-modules: Web.Twitter, Web.Twitter.OAuth

